fix(css): Font size inconsistency in code snippets on iOS
- Added CSS rules to ensure consistent font size for code elements across iOS devices. This change addresses the font size imbalance issue reported in code snippets.

- Related issue: https://github.com/adityatelange/hugo-PaperMod/issues/828

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -118,6 +118,13 @@ table, th, td {
   padding: 0.4rem;
 }
 
+code {
+  text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
 code:not(pre > code) {
   padding: 0.1em 0.2em;
   font-size: 90%;
